# Explore_C

./: .gitignore
Advance/: 01_malloc_notice.c  02_calloc_realloc.c  03_string_intensify.c  04_string_reverse.c  05_sprintf.c  06_sscanf.c  07_substring.c
C语言/: 不重复三位数.c  判断三角形.c  数组比较大小.c  数组算平均值.c  数组逆序.c  文件操作.c  统计正数负数.c
Exercise/: fileOperate.c  math.c  查询字符ASCII码.c
Exercise/Information_Manage_System/: IMS  xmake.lua
Exercise/archive/: 1-200内包含3的和.c  LinkedList.c  不重复三位数.c  判断三角形.c  学生成绩求平均分.c  数组比较大小.c
Exercise/cjson/: .clang-format
Exercise/libkc/: .gitignore  REDME.md  xmake.lua
Exercise/mqtt/: 1.c
Exercise/mxml/: CMakeLists.txt
Exercise/mxml/res/: example.xml  test.xml
Exercise/mxml/src/: construct_data.c  parse_data.c
Exercise/other/: GitProxyConfig.c  wol.c  获取系统变量路径.c
Exercise/snake/: main.c  snake.c  snake.h
Grammar/: enum.c  round.c  struct.c  union.c  计算公式.c
Grammar/01-选择结构/: 判断成绩等级.c  最大公约数最小公倍数.c
Grammar/01_简介与基本语法/: hello.c
Grammar/02-循环结构/: 不重复三位数.c  数的阶乘.c
Grammar/02_变量与数据类型/: ASCII.c  datatype_limits.c
Grammar/04_流程控制/: 两数比较大小.c  个位十位百位.c  九九乘法表.c  字符大小写转换.c  数的阶乘.c
Grammar/05-指针/: 指针数组.c  指针的定义.c
Grammar/05_函数/: 函数比较大小.c  递归函数.c
Grammar/06_数组/: 01_数组定义.c  02_获取数组大小.c  03_遍历数组.c  04_二维数组定义.c  05_二维数组遍历.c  06_数组复制.c  一维数组求和求平均值.c  二维数组行最大值.c  二维数组遍历.c  冒泡排序.c  数组逆序.c  选择排序.c
Grammar/07_指针/: 01_指针定义.c  02_万能指针.c  03_指针运算.c  04_多级指针.c  05_const_修饰指针.c  06_数组指针与指针数组.c  07_指针遍历数组.c  08_数组作为参数.c  (+6 more)
Script/: clear.ps1  clear.sh
Test/: 1.c  1.cpp  curl.c  myfile.data  test.txt  判断三角形.c  数组比大小.c  文件操作.c  最大公约数和最小公倍数.c
(+169 files in other folders)
